crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__renderer__tests__can_create_dynamic_attributes-2.snap
---
source: crates/decorous-backend/src/prerender/renderer.rs
expression: "format!(\"{}\\n---\\n{}\", String :: from_utf8(js_out).unwrap(), String ::\n    from_utf8(html_out).unwrap())"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function replace(node) {
const text = document.createTextNode("");
node.replaceWith(text);
return text;
}
const elems = [document.getElementById("0"),replace(document.getElementById("0").childNodes[1]),];
function __init_ctx() {
let x = 3;
return [x];
}
const ctx = __init_ctx();
let updating = false;
dirty.fill(255);
__update(dirty);
dirty.fill(0);
function __update(dirty) {
if (dirty[0] & 1) elems[1].data = ctx[0];
if (dirty[0] & 1) elems[0].setAttribute("class", ctx[0] + 3);
}
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
__update(dirty);
updating = false;
dirty.fill(0);
});
}

---
<script defer src="./out.js"></script>
<p id="0">Hello <span></span></p>
