crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__renderer__tests__can_write_basic_js-2.snap
---
source: crates/decorous-backend/src/prerender/renderer/mod.rs
expression: "format!(\"{}\\n---\\n{}\", String :: from_utf8(js_out).unwrap(), String ::\n    from_utf8(html_out).unwrap())"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function replace(node) {
const text = document.createTextNode("");
node.replaceWith(text);
return text;
}
const elems = {"2":replace(document.getElementById("2")),"4":document.getElementById("4"),"7":replace(document.getElementById("7")),};
function __init_ctx() {
let x = 3;
elems["4"].addEventListener("click", () => __schedule_update(0, x = 444));
return [x];
}
const ctx = __init_ctx();
let updating = false;
dirty.fill(255);
__update(dirty);
dirty.fill(0);
function __update(dirty) {
if (dirty[0] & 1) elems[2].data = ctx[0];
if (dirty[0] & 1) elems[7].data = ctx[0];
}
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
__update(dirty);
updating = false;
dirty.fill(0);
});
}

---
<p>Hello, <span id="2"></span>!</p><button id="4">Click Me</button><p><span id="7"></span></p>
