crates/decorous-backend/src/prerender/snapshots/decorous_backend__prerender__renderer__tests__multiple_variables_are_properly_in_dirty_buffer.snap
---
source: crates/decorous-backend/src/prerender/renderer.rs
expression: "format!(\"{}\\n---\\n{}\", String :: from_utf8(js_out).unwrap(), String ::\n    from_utf8(html_out).unwrap())"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function replace(node) {
const text = document.createTextNode("");
node.replaceWith(text);
return text;
}
const elems = [replace(document.getElementById("0").childNodes[0]),replace(document.getElementById("0").childNodes[2]),replace(document.getElementById("0").childNodes[4]),];
function __init_ctx() {
let x = 0;
let y = 0;
elems[0].data = x;
elems[1].data = y;
elems[2].data = x + y;
return [x,y];
}
const ctx = __init_ctx();
let updating = false;
function __update(dirty) {
if (dirty[0] & 1) elems[0].data = ctx[0];
if (dirty[0] & 2) elems[1].data = ctx[1];
if (dirty[0] & 3) elems[2].data = ctx[0] + ctx[1];
}
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(Math.ceil(ctx_idx / 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
__update(dirty);
updating = false;
dirty.fill(0);
});
}

---
<script defer src="./out.js"></script>
<p id="0"><span></span>and <span></span>and <span></span></p>
